--- a/styles/styles.css
+++ b/styles/styles.css
@@ -49,6 +49,60 @@ a.link{
 	text-decoration: none;
 	color:#000;
 }
+
+/*homepage animations*/
+#black-screen{
+	background: #000;
+	width: 100%;
+	height: 100vh;
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 5;
+}
+#hi{
+	z-index:6;
+}
+.intro{
+	font-size: 40px;
+	text-align: center;
+}
+.intro h2 {
+	font-family: "Poller One", cursive;
+	font-size: 20vw;
+	font-weight: bold;
+	padding-top: 60px;
+	color: #ce4f00;
+	text-align: center;
+	margin-bottom: 0px;
+	margin-top:-50px;
+	position: relative;
+	opacity: 0;
+	transition: all ease 3s;
+}
+.intro h2.bringIn {
+	margin-top: 50px;
+	opacity: 1;
+}
+.video-background {
+    background: #000;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: -99;
+    display: block;
+    height: 100vh;
+    width: 100%;
+    overflow: hidden;
+}
+.fa-heart{
+	color:#ce4f00;
+}
+.intro p{
+	margin-top: 0;
+}
 #coding-history{
 	font-weight: bold;
 	color: #ce4f00;
@@ -223,10 +277,50 @@ li.vanilla h3{
 	list-style: square;
 	margin: 5px 0;
 }
+.hidden-text {
+    opacity: 0;
+    margin-top: -50px;
+    display: block;
+    font-size: 16px;
+    font-family: "Covered By Your Grace", cursive;
+    transition: all 1.5s ease;
+}
+.hidden-text.bringIn {
+    opacity: 1;
+    margin-top: 10px;
+    font-size: 24px;
+    white-space: nowrap;
+}
+
+video{
+	min-height: 100vh;
+	min-width: 100%;
+	opacity: 0;
+	transition: all ease 3s;
+}
+video.bringIn{
+	opacity: 1;
+}
 
 @media screen and (min-width: 600px){
 	#project-list li{
 		width: 250px;
 	}
+	.intro h2 {
+	    color: #ce4f00;
+	    font-size: 90px;
+	}
+	.hidden-text.bringIn {
+    color: #000;
+    font-size: 25px;
+}
+.hidden-text {
+    color: #000;
+    font-size: 25px;
+}
+.intro{
+	font-size: 60px;
+	text-align: center;
+}
 }
 
